	* doc/grep.1: Fix typo and reorganize GREP_COLORS documentation.

	* src/kwset.c (DEPTH_SIZE): New macro to anticipate
	  architectures/compilers where CHAR_BIT is not 8 (we assume it
	  won't be less than 4, which would be non-standard and unlikely).
	  Checked to hold for CHAR_BIT up to 1023 (and maybe more)!
	* src/kwset.c (kwsincr): Use DEPTH_SIZE in two array declarations.

2005-07-04  Charles Levert  <charles_levert@gna.org>

	* src/kwset.c: Readability changes.
	  Replace uses of 0 for pointer values by NULL.
	  Generalize use of existing U() macro to whole file.

	* src/kwset.c (kwsprep): Use memset() and memcpy() when appropriate.

	* src/kwset.c (kwsprep): Move three variable declarations to
	  the single {}-block where they are used.

	* src/kwset.c (kwsprep): Optimize search for mind2 value by
	  starting from the end of the target[] array.

2005-06-22  Charles Levert  <charles_levert@gna.org>

	* grep/autogen.sh, grep/src/Makefile.am, grep/tests/backref.sh,
	  grep/tests/bre.sh, grep/tests/empty.sh, grep/tests/ere.sh,
	  grep/tests/file.sh, grep/tests/fmbtest.sh, grep/tests/foad1.sh,
	  grep/tests/khadafy.sh, grep/tests/options.sh,
	  grep/tests/spencer1.sh, grep/tests/spencer2.sh,
	  grep/tests/status.sh, grep/tests/warning.sh: As per autoconf's
	  "Portable Shell Programming" guidelines, replace all instances
	  of "#!/bin/sh" by "#! /bin/sh" (notice the space).

2005-06-21  Charles Levert  <charles_levert@gna.org>

	* src/grep.c (nlscan): Make this function more robust by removing
	  the undocumented assumption that its "lim" argument points
	  right after a line boundary.  This will be used later to fix
	  --byte-offset's broken behavior.  Patch #3769.

	* src/grep.c (main): Add a test to check if -o/--only-matching
	  and context lines are both specified and if so, set both context
	  specifications (before and after) to zero then print an explicit
	  warning to stderr explaining what was done and why (as opposed